docs/api/qiskit/0.25/qiskit.algorithms.EstimationProblem.md
---
title: EstimationProblem
description: API reference for qiskit.algorithms.EstimationProblem
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.algorithms.EstimationProblem
---

# qiskit.algorithms.EstimationProblem

<span id="qiskit.algorithms.EstimationProblem" />

`EstimationProblem(state_preparation, objective_qubits, grover_operator=None, post_processing=None, is_good_state=None)`[GitHub](https://github.com/qiskit/qiskit/tree/stable/0.17/qiskit/algorithms/amplitude_estimators/estimation_problem.py "view source code")

The estimation problem is the input to amplitude estimation algorithm.

This class contains all problem-specific information required to run an amplitude estimation algorithm. That means, it minimally contains the state preparation and the specification of the good state. It can further hold some post processing on the estimation of the amplitude or a custom Grover operator.

**Parameters**

*   **state\_preparation** (`QuantumCircuit`) – A circuit preparing the input state, referred to as $\mathcal{A}$.
*   **objective\_qubits** (`Union`\[`int`, `List`\[`int`]]) – A single qubit index or a list of qubit indices to specify which qubits to measure. The `is_good_state` function is applied on the bitstring of these objective qubits.
*   **grover\_operator** (`Optional`\[`QuantumCircuit`]) – The Grover operator $\mathcal{Q}$ used as unitary in the phase estimation circuit.
*   **post\_processing** (`Optional`\[`Callable`\[\[`float`], `float`]]) – A mapping applied to the result of the algorithm $0 \leq a \leq 1$, usually used to map the estimate to a target interval. Defaults to the identity.
*   **is\_good\_state** (`Optional`\[`Callable`\[\[`str`], `bool`]]) – A function to check whether a string represents a good state. Defaults to all objective qubits being in state $|1\rangle$.

### \_\_init\_\_

<span id="qiskit.algorithms.EstimationProblem.__init__" />

`__init__(state_preparation, objective_qubits, grover_operator=None, post_processing=None, is_good_state=None)`

**Parameters**

*   **state\_preparation** (`QuantumCircuit`) – A circuit preparing the input state, referred to as $\mathcal{A}$.
*   **objective\_qubits** (`Union`\[`int`, `List`\[`int`]]) – A single qubit index or a list of qubit indices to specify which qubits to measure. The `is_good_state` function is applied on the bitstring of these objective qubits.
*   **grover\_operator** (`Optional`\[`QuantumCircuit`]) – The Grover operator $\mathcal{Q}$ used as unitary in the phase estimation circuit.
*   **post\_processing** (`Optional`\[`Callable`\[\[`float`], `float`]]) – A mapping applied to the result of the algorithm $0 \leq a \leq 1$, usually used to map the estimate to a target interval. Defaults to the identity.
*   **is\_good\_state** (`Optional`\[`Callable`\[\[`str`], `bool`]]) – A function to check whether a string represents a good state. Defaults to all objective qubits being in state $|1\rangle$.

## Methods

|                                                                                                                                                   |                                                             |
| ------------------------------------------------------------------------------------------------------------------------------------------------- | ----------------------------------------------------------- |
| [`__init__`](#qiskit.algorithms.EstimationProblem.__init__ "qiskit.algorithms.EstimationProblem.__init__")(state\_preparation, objective\_qubits) | **type state\_preparation**`QuantumCircuit`                 |
| [`rescale`](#qiskit.algorithms.EstimationProblem.rescale "qiskit.algorithms.EstimationProblem.rescale")(scaling\_factor)                          | Rescale the good state amplitude in the estimation problem. |

## Attributes

|                                                                                                                                       |                                                                      |
| ------------------------------------------------------------------------------------------------------------------------------------- | -------------------------------------------------------------------- |
| [`grover_operator`](#qiskit.algorithms.EstimationProblem.grover_operator "qiskit.algorithms.EstimationProblem.grover_operator")       | Get the $\mathcal{Q}$ operator, or Grover operator.                  |
| [`is_good_state`](#qiskit.algorithms.EstimationProblem.is_good_state "qiskit.algorithms.EstimationProblem.is_good_state")             | Checks whether a bitstring represents a good state.                  |
| [`objective_qubits`](#qiskit.algorithms.EstimationProblem.objective_qubits "qiskit.algorithms.EstimationProblem.objective_qubits")    | Get the criterion for a measurement outcome to be in a ‘good’ state. |
| [`post_processing`](#qiskit.algorithms.EstimationProblem.post_processing "qiskit.algorithms.EstimationProblem.post_processing")       | Apply post processing to the input value.                            |
| [`state_preparation`](#qiskit.algorithms.EstimationProblem.state_preparation "qiskit.algorithms.EstimationProblem.state_preparation") | Get the $\mathcal{A}$ operator encoding the amplitude $a$.           |

### grover\_operator

<span id="qiskit.algorithms.EstimationProblem.grover_operator" />

`property grover_operator`

Get the $\mathcal{Q}$ operator, or Grover operator.

If the Grover operator is not set, we try to build it from the $\mathcal{A}$ operator and objective\_qubits. This only works if objective\_qubits is a list of integers.

**Return type**

`Optional`\[`QuantumCircuit`]

**Returns**

The Grover operator, or None if neither the Grover operator nor the $\mathcal{A}$ operator is set.

### is\_good\_state

<span id="qiskit.algorithms.EstimationProblem.is_good_state" />

`property is_good_state`

Checks whether a bitstring represents a good state.

**Return type**

`Callable`\[\[`str`], `bool`]

**Returns**

Handle to the `is_good_state` callable.

### objective\_qubits

<span id="qiskit.algorithms.EstimationProblem.objective_qubits" />

`property objective_qubits`

Get the criterion for a measurement outcome to be in a ‘good’ state.

**Return type**

`List`\[`int`]

**Returns**

The criterion as list of qubit indices.

### post\_processing

<span id="qiskit.algorithms.EstimationProblem.post_processing" />

`property post_processing`

Apply post processing to the input value.

**Return type**

`Callable`\[\[`float`], `float`]

**Returns**

A handle to the post processing function. Acts as identity by default.

### rescale

<span id="qiskit.algorithms.EstimationProblem.rescale" />

`rescale(scaling_factor)`

Rescale the good state amplitude in the estimation problem.

**Parameters**

**scaling\_factor** (`float`) – The scaling factor in \[0, 1].

**Return type**

`EstimationProblem`

**Returns**

A rescaled estimation problem.

### state\_preparation

<span id="qiskit.algorithms.EstimationProblem.state_preparation" />

`property state_preparation`

Get the $\mathcal{A}$ operator encoding the amplitude $a$.

**Return type**

`Optional`\[`QuantumCircuit`]

**Returns**

The $\mathcal{A}$ operator as QuantumCircuit.

